--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -8,5 +8,9 @@
 @using MauiBlazorApp.Shared
 @using Blazorise
 @using MauiBlazorApp.Services
+@using Microsoft.JSInterop
+
+
 @inject IPersonService PersonService
+@inject IJSRuntime JSRuntime
 
