--- a/Client/MauiBlazorApp/Pages/Index.razor
+++ b/Client/MauiBlazorApp/Pages/Index.razor
@@ -6,6 +6,7 @@
 @inject NavigationManager NavManager;
 
 
+
 <head>
     <!-- for the deopdown update , delete  -->
     <link rel="stylesheet" href="_content/Blazorise/blazorise.css" />
@@ -19,8 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-   
-
+@*     <script src="exportPdf.js"></script>
+ *@
     
 </head>
 
@@ -30,6 +31,7 @@
  *@
 
 <div class="input-group mb-3">
+
     <input type="text" class="form-control" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
 
     <button class="btn btn-clear" type="button" @onclick="ClearSearchText"><i class="fas fa-times-circle"> X </i></button>
@@ -37,6 +39,8 @@
     <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button" @onclick="BtnSearch_Clicked">Search</button>
     </div>
+    @* <button class="btn btn-primary" @onclick="btnExportData">Export as PDF</button> *@
+
 </div>
 
 
@@ -266,9 +270,7 @@ else
 
 
 
-
 @code {
-
 
 
     private void ClearSearchText()
