--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -31,11 +31,11 @@
         </div>
 
 
-        @* <div class="nav-item px-3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Android 
+                <span class="oi oi-home" aria-hidden="true"></span> Name List
             </NavLink>
-        </div> *@
+        </div>
 
 
         <div class="nav-item px-3">
