--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -9,8 +9,9 @@
 @using Blazorise
 @using MauiBlazorApp.Services
 @using Microsoft.JSInterop
+@using System.Text.Json
+
 
 
 @inject IPersonService PersonService
 @inject IJSRuntime JSRuntime
-
