--- a/Client/BlazorApp/Pages/Index.razor
+++ b/Client/BlazorApp/Pages/Index.razor
@@ -9,14 +9,18 @@
 @using System.Text.RegularExpressions;
 @using Microsoft.JSInterop;
 @using Newtonsoft.Json;
+@using Microsoft.AspNetCore.Components;
 
 @using iTextSharp.text;
 @using iTextSharp.text.pdf;
 
 @inject IPersonService PersonService
-@inject IJSRuntime JSRuntime
-@inject NavigationManager NavManager;
 
+@inject IJSRuntime JSRuntime
+@inject NavigationManager NavManager
+
+
+@inherits LayoutComponentBase
 
 
 <head>
@@ -34,6 +38,7 @@
 
     <script src="exportPdf.js"></script>
 
+    
 
 </head>
 
@@ -62,6 +67,7 @@
     </div>
 
 </div>
+
 
 <style>
 
@@ -142,7 +148,7 @@
         .btn-secondary:hover {
             background-color: none;
             border-color: None;
-            color: lightblue;
+            color: Highlight;
             font-weight: normal;
             border: solid;
         }
@@ -150,16 +156,14 @@
         .btn-secondary:active,
         .btn-secondary.active {
             background-color: white;
-            border-color: None;
-            color: lightblue;
+            border-color: blue;
             font-weight: normal;
             border: none
         }
 
-    .dropdown-toggle.btn-secondary: {
-        background-color: white;
+    .dropdown-toggle.btn-secondary{
+        border-color: green;
         border-color: None;
-        color: lightblue;
         font-weight: normal;
         border: none
     }
@@ -173,6 +177,8 @@
             background-color: green;
         }
 </style>
+
+
 <div class="dropdown">
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         @if (searchResults != null)
@@ -290,7 +296,7 @@ else
                                 @person.Vorname
                                 <div class="dropdown">
                                     <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Actions
+                                        option
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <button class="btn btn-primary mx-1 mr-3" @onclick="@(() => DisplayUpdate(person.Id))">Update</button>
@@ -492,6 +498,7 @@ else
 
         _PersonList = await PersonService.GetAllPersonsList();
 
+
     }
 
     private void HandleSearchTextChanged(ChangeEventArgs e)
@@ -551,6 +558,9 @@ else
         NavManager.NavigateTo($"updatePerson/{personId}");
     }
 
+   
+  
+
     private async void DisplayDeleteConfirmation(int personId)
     {
         bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this person?");
@@ -564,19 +574,26 @@ else
             if (deleteresponse.Success)
             {
                 await OnInitializedAsync();
-                StateHasChanged();
+                 StateHasChanged();
+
             }
         }
     }
+
+
+
     [Parameter] public EventCallback<bool> OnConfirmation { get; set; }
 
     private async Task ConfirmDelete()
     {
         await OnConfirmation.InvokeAsync(true);
     }
+
+    
+
+
 }
 
 
 
-       
 
