--- a/Client/MauiBlazorApp/Pages/AddUpdatePerson.razor
+++ b/Client/MauiBlazorApp/Pages/AddUpdatePerson.razor
@@ -2,103 +2,139 @@
 @page "/UpdatePerson/{Id:int}"
 @using MauiBlazorApp.Models;
 @using MauiBlazorApp.Services
+@using System.ComponentModel.DataAnnotations
+@using System.Text.RegularExpressions
+
 @inject IPersonService PersonService;
 @inject NavigationManager NavManager
 
 
 <h3>AddUpdatePerson</h3>
-
-<div class="form-group d-flex">
-   <div class=" form-group mx-2 ">
-       <label for="Entry_Name">Nachname</label>
-        <input id="Entry_Name" @bind="Nachname"  class="form-control" />
-   </div>
-
-    <div class=" form-group mx-2 ">
-       <label for="Entry_Vorname">Vorname</label>
-       <input id="Entry_Vorname" @bind="Vorname" class="form-control" />
-   </div>
-
-    <div class=" form-group mx-2 ">
-       <label for="Entry_Zwischenname">Zwischenname</label>
-       <input id="Entry_Zwischenname" @bind="Zwischenname" class="form-control" />
-
-   </div>
-</div>
-
-<div class="mt-3 form-group mx-2">
-    <label>Gender</label>
-    <div class="d-flex flex-row">
-        <div class="form-check mr-3 mx-3">
-            <input checked ="@(gender == "Male")" @onchange="@(()=>SetGender("Male"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-                Male
-            </label>
+<div class=" form">
+    <div class="form-group d-flex">
+        <div class=" form-group mx-2 ">
+            <label for="Entry_Name">Nachname</label>
+            <input id="Entry_Name" @bind="Nachname" class="form-control" />
+            @if (string.IsNullOrEmpty(Nachname) || !Regex.IsMatch(Nachname, ".{2,}"))
+            {
+                <div class="text-danger"> Nachname is required!</div>
+            }
         </div>
-        <div class="form-check mr-3 mx-3">
-            <input checked="@(gender == "Female")" @onchange="@(()=>SetGender("Female"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-                Female
-            </label>
+
+        <div class=" form-group mx-2 ">
+            <label for="Entry_Vorname">Vorname</label>
+            <input id="Entry_Vorname" @bind="Vorname" class="form-control" />
+            @if (string.IsNullOrEmpty(Vorname) || !Regex.IsMatch(Vorname, ".{2,}"))
+            {
+                <div class="text-danger"> Vorname is required!</div>
+            }
         </div>
-        <div class="form-check mx-3">
-            <input checked="@(gender == "Divers")" @onchange="@(()=>SetGender("Divers"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-            <label class="form-check-label" for="flexRadioDefault3">
-                Divers
-            </label>
+
+        <div class=" form-group mx-2 ">
+            <label for="Entry_Zwischenname">Zwischenname</label>
+            <input id="Entry_Zwischenname" @bind="Zwischenname" class="form-control" />
+
         </div>
     </div>
-</div>
 
-<div class=" mt-2 form-group mx-2 ">
-    <label for="Entry_Email">Email</label>
-    <input id="Entry_Email" @bind="Email" type="email" class="form-control" />
-</div>
-
-<div class="mt-2 form-group mx-2">
-    <label for="Entry_PhoneNumber">Telefonnummer</label>
-    <input id="Entry_PhoneNumber" @bind="Telefonnummer" class="form-control" />
-</div>
-
-
-<div class=" mt-2 form-group d-flex">
-   <div class="form-group mx-2" >
-     <label for="Entry_Strasse">Strasse</label>
-     <input id="Entry_Strasse" @bind="Strasse" class="form-control" />
-   </div>
-    <div class="col-md-4 mx-2">
-        <label for="Entry_Hausnummer">Hausnummer</label>
-        <input id="Entry_Hausnummer" @bind="Hausnummer" class="form-control" />
+    <div class="mt-3 form-group mx-2">
+        <label>Gender</label>
+        <div class="d-flex flex-row">
+            <div class="form-check mr-3 mx-3">
+                <input checked="@(gender == "Male")" @onchange="@(()=>SetGender("Male"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                    Male
+                </label>
+            </div>
+            <div class="form-check mr-3 mx-3">
+                <input checked="@(gender == "Female")" @onchange="@(()=>SetGender("Female"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                <label class="form-check-label" for="flexRadioDefault2">
+                    Female
+                </label>
+            </div>
+            <div class="form-check mx-3">
+                <input checked="@(gender == "Divers")" @onchange="@(()=>SetGender("Divers"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                <label class="form-check-label" for="flexRadioDefault3">
+                    Divers
+                </label>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4 mx-2">
-        <label for="Entry_PLZ">PLZ</label>
-        <input id="Entry_PLZ" @bind="PLZ" class="form-control" />
+
+    <div class=" mt-2 form-group mx-2 ">
+        <label for="Entry_Email">Email</label>
+        <input id="Entry_Email" @bind="Email" type="email" class="form-control" />
+        @if (!IsValidEmail(Email))
+        {
+            <div class="text-danger">Please enter a valid email address.</div>
+        }
     </div>
+
+    <div class="mt-2 form-group mx-2">
+        <label for="Entry_PhoneNumber">Telefonnummer</label>
+        <input id="Entry_PhoneNumber" @bind="Telefonnummer" class="form-control" />
+        @if (string.IsNullOrEmpty(Telefonnummer) || !Regex.IsMatch(Telefonnummer, ".{8,}"))
+        {
+            <div class="text-danger"> Telefonnummer is required!</div>
+        }
+    </div>
+
+
+    <div class=" mt-2 form-group d-flex">
+        <div class="form-group mx-2">
+            <label for="Entry_Strasse">Strasse</label>
+            <input id="Entry_Strasse" @bind="Strasse" class="form-control" />
+            @if (string.IsNullOrEmpty(Strasse) || !Regex.IsMatch(Strasse, ".{2,}"))
+            {
+                <div class="text-danger"> Strasse is required!</div>
+            }
+        </div>
+        <div class="col-md-4 mx-2">
+            <label for="Entry_Hausnummer">Hausnummer</label>
+            <input id="Entry_Hausnummer" @bind="Hausnummer" class="form-control" />
+            @if (string.IsNullOrEmpty(Hausnummer) || !Regex.IsMatch(Hausnummer, ".{1,}"))
+            {
+                <div class="text-danger"> Hausnummer is required!</div>
+            }
+        </div>
+        <div class="col-md-4 mx-2">
+            <label for="Entry_PLZ">PLZ</label>
+            <input id="Entry_PLZ" @bind="PLZ" class="form-control" />
+            @if (string.IsNullOrEmpty(PLZ) || !Regex.IsMatch(PLZ, ".{5,}"))
+            {
+                <div class="text-danger"> PLZ is required!</div>
+            }
+        </div>
+    </div>
+
+    <div class=" mt-2 form-group d-flex">
+        <div class="col-md-4 mx-2">
+            <label for="Entry_Stadt">Stadt</label>
+            <input id="Entry_Stadt" @bind="Stadt" class="form-control" />
+            @if (string.IsNullOrEmpty(Stadt) || !Regex.IsMatch(Stadt, ".{2,}"))
+            {
+                <div class="text-danger"> Stadt is required!</div>
+            }
+        </div>
+        <div class="form-group mx-2">
+            <label for="Entry_Land">Land</label>
+            <input id="Entry_Land" @bind="Land" class="form-control" />
+            @if (string.IsNullOrEmpty(Land) || !Regex.IsMatch(Land, ".{2,}"))
+            {
+                <div class="text-danger"> Land is required!</div>
+            }
+        </div>
+    </div>
+
+
+    <button @onclick=" AddUpdatePersonDetails" class="mt-3 btn btn-primary mx-1">Save</button>
+
 </div>
-
-<div class=" mt-2 form-group d-flex">
-    <div class="col-md-4 mx-2">
-        <label for="Entry_Stadt">Stadt</label>
-        <input id="Entry_Stadt" @bind="Stadt" class="form-control" />
-    </div>
-    <div class="form-group mx-2">
-       <label for="Entry_Land">Land</label>
-       <input id="Entry_Land" @bind="Land" class="form-control" />
-      </div>
- </div>
-
-
-<button @onclick=" AddUpdatePersonDetails" class="mt-3 btn btn-primary mx-1">Save</button>
 
 @code {
 
-
     [Parameter]
-
-
-
     public int Id { get; set; }
-
     private string Nachname;
     private string Vorname;
     private string Zwischenname;
@@ -111,10 +147,10 @@
     private string Land;
     private string gender;
 
-    private void SetGender(string gender )
+    private void SetGender(string gender)
 
     {
-        this. gender = gender;
+        this.gender = gender;
     }
 
     protected override async Task OnInitializedAsync()
@@ -122,7 +158,7 @@
         if (Id > 0)
         {
             var existingPersonDetail = await PersonService.GetPersonDetailById(Id);
-            if (existingPersonDetail?.Id> 0)
+            if (existingPersonDetail?.Id > 0)
             {
                 Nachname = existingPersonDetail.Nachname;
                 Vorname = existingPersonDetail.Vorname;
@@ -131,7 +167,7 @@
                 Telefonnummer = existingPersonDetail.Telefonnummer;
                 Strasse = existingPersonDetail.Strasse;
                 Hausnummer = existingPersonDetail.Hausnummer;
-                PLZ = existingPersonDetail.PLZ.ToString();  // convert plz from int to string only here 
+                PLZ = existingPersonDetail.PLZ.ToString();  // convert plz from int to string only here
                 Stadt = existingPersonDetail.Stadt;
                 Land = existingPersonDetail.Land;
                 gender = existingPersonDetail.Gender;
@@ -143,11 +179,17 @@
 
     private async void AddUpdatePersonDetails()
     {
+        if (!IsValidInput(Nachname) || !IsValidInput(Vorname) || 
+        !IsValidInput(Telefonnummer) || !IsValidInput(Strasse) || !IsValidInput(Hausnummer) ||
+        !IsValidInput(PLZ) || !IsValidInput(Stadt) || !IsValidInput(Land))
+        {
+            await App.Current.MainPage.DisplayAlert("Validation Error", "All fields are required.", "OK");
+            return;
+        }
+
         var addUpdateRequest = new AddUpdatePersonRequest
-
-            {
+        {
                 Id = Id,
-
                 Nachname = Nachname,
                 Vorname = Vorname,
                 Zwischenname = Zwischenname,
@@ -159,18 +201,16 @@
                 Stadt = Stadt,
                 Land = Land,
                 Gender = gender,
-
-
-
-            };
+        };
 
         if (Id > 0)
         {
             var response = await PersonService.UpdatePerson(addUpdateRequest);
             if (response.Success)
             {
-                await App.Current.MainPage.DisplayAlert("Record Updated", "Contact Updated Successfully", "OK");
                 NavManager.NavigateTo("..");
+
+                await App.Current.MainPage.DisplayAlert("Record Updated", "Contact Updated Successfully", "OK");
                 // NavManager.NavigateTo("/");
             }
             else
@@ -180,27 +220,49 @@
         }
         else
         {
-
-
-
             var response = await PersonService.AddPerson(addUpdateRequest);
 
-            if (response.Success)
+            @if (!IsValidEmail(Email))
+            {
+                await App.Current.MainPage.DisplayAlert("Email have to be valid ", response.ErrorMessage, "OK");
+            }
+
+            else if (response.Success)
             {
                 Nachname = Vorname = Zwischenname = Email = Telefonnummer = Strasse = Hausnummer = PLZ = Stadt = Land = gender = string.Empty;
 
                 this.StateHasChanged();
 
-                await App.Current.MainPage.DisplayAlert("Contact Added", "Contact Added Successfully", "OK");
-               // NavManager.NavigateTo("/");
                 NavManager.NavigateTo("..");
-                //Shell.Current.GoToAsync("..");
+
+                await App.Current.MainPage.DisplayAlert("Contact Added", "Contact Added Successfully", "OK");
+                // NavManager.NavigateTo("/");
+                // Shell.Current.GoToAsync("..");
+
             }
+
             else
             {
                 await App.Current.MainPage.DisplayAlert("Oops", response.ErrorMessage, "OK");
             }
 
         }
+    }
+
+    private bool IsValidEmail(string email)
+    {
+        if (string.IsNullOrEmpty(email))
+        {
+            return false;
+        }
+
+        // Regex pattern for a simple email validation
+        string emailPattern = @"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$";
+        return Regex.IsMatch(email, emailPattern);
+    }
+
+    private bool IsValidInput(string value, bool isEmail = false)
+    {
+          return !string.IsNullOrWhiteSpace(value) && value.Length >= 1;
     }
 }
