--- a/Client/MauiBlazorApp/Pages/Index.razor
+++ b/Client/MauiBlazorApp/Pages/Index.razor
@@ -9,15 +9,11 @@
 @using System.Text.RegularExpressions;
 @using Microsoft.JSInterop;
 @using Newtonsoft.Json;
-
 @using iTextSharp.text;
 @using iTextSharp.text.pdf;
-
 @inject IPersonService PersonService
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager;
-
-
 
 <head>
     <!-- for the deopdown update , delete    -->
@@ -37,10 +33,11 @@
 
 </head>
 
-<h1>Person List</h1>
-
 @* <iframe width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  *@
+
+<h1>Person List</h1>
+
 <div class="input-group mb-3">
 
     <input type="text" class="form-control" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
@@ -63,6 +60,47 @@
 
 </div>
 
+<div class ="search-dropdown">
+
+<div class="dropdown">
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        @if (searchResults != null)
+        {
+            @foreach (var person in searchResults)
+            {
+                <li class="dropdown-item">@person.Nachname</li>
+            }
+        }
+
+    </ul>
+</div>
+
+@if (searchResults != null)
+{
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>Nachname</td>
+                    <th>Vorname</th>
+                    <!-- Add other table headers here -->
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var person in searchResults)
+                {
+
+                    <tr @onclick="@( () => DisplayOption(person) )">
+                        <td>@person.Nachname</td>
+                        <td>@person.Vorname</td>
+                        <!-- Add other table data here -->
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+}
+</div>
 
 <style>
 
@@ -148,7 +186,6 @@
             border: solid;
         }
 
-        .btn-secondary:active,
         .btn-secondary.active {
             background-color: white;
             border-color: None;
@@ -157,9 +194,8 @@
             border: none
         }
 
-    .dropdown-toggle.btn-secondary: {
+    .dropdown-toggle.btn-secondary {
         background-color: white;
-        border-color: None;
         color: lightblue;
         font-weight: normal;
         border: none
@@ -175,83 +211,17 @@
         }
 </style>
 
-<div class="dropdown">
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        @if (searchResults != null)
-        {
-            @foreach (var person in searchResults)
-            {
-                <li class="dropdown-item">@person.Nachname</li>
-            }
-        }
-
-    </ul>
-</div>
-
-
-
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteConfirmationModalLabel">Delete Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this person?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" @onclick="ConfirmDelete">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-@if (searchResults != null)
-{
-    <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <td>Nachname</td>
-                    <th>Vorname</th>
-                    <!-- Add other table headers here -->
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var person in searchResults)
-                {
-                    @*                     <tr @onclick="@( () => DisplayOption(person) )">
-
-            *@
-                    <tr @onclick="@( () => DisplayOption(person) )">
-                        <td>@person.Nachname</td>
-                        <td>@person.Vorname</td>
-                        <!-- Add other table data here -->
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
-
-
 @if (_PersonList == null)
 {
     <p>Loading...</p>
 }
+
 else
 {
-
     <div class="table-responsive">
         <table class="table">
             <thead>
                 <tr>
-
                     <th>Vorname</th>
                     <td>Nachname</td>
                     <td>Zwischenname</td>
@@ -263,30 +233,12 @@ else
                     <td>Stadt</td>
                     <td>Land</td>
                     <td>Gender</td>
-                    @*                res of the list
-                *@
                 </tr>
             </thead>
             <tbody>
                 @foreach (var person in _PersonList)
                 {
                     <tr @onclick="@(() => DisplayOption(person))">
-
-                        @* <tr> *@
-                        @*  <td>
-                <div class="position-relative">
-                @person.Vorname
-                <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Options
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <button class="btn btn-primary mx-1 mr-3" @onclick="@(() => DisplayUpdate(person.Id))">Update</button>
-                <button class="btn btn-danger mx-1 mr-3 " @onclick="@(() => DisplayDeleteConfirmation(person.Id))">Delete</button>
-                </div>
-                </div>
-                </div>
-                </td> *@
                         <td>@person.Vorname</td>
                         <td>@person.Nachname</td>
                         <td>@person.Zwischenname</td>
@@ -298,7 +250,6 @@ else
                         <td>@person.Stadt</td>
                         <td>@person.Land</td>
                         <td>@person.Gender</td>
-                        <!-- Add other table data here -->
                         <td>
                         </td>
                     </tr>
@@ -308,7 +259,6 @@ else
 
     </div>
 }
-
 
 <script>
     window.BlazorDownloadFile = (fileName, data) => {
@@ -322,8 +272,12 @@ else
     };
 </script>
 
-
 @code {
+
+    List<PersonModel> _PersonList;
+    private string searchText = string.Empty;
+    private List<PersonModel> allPersons;
+    private List<PersonModel> searchResults;
 
     private async Task DownloadAsPdf()
     {
@@ -406,7 +360,6 @@ else
         }
     }
 
-
     private async Task DownloadAsJson()
     {
         try
@@ -453,30 +406,17 @@ else
         });
     }
 
-
-
-
     private void ClearSearchText()
     {
-
         searchText = "";
+        searchResults = null;
     }
-
-
-
-
-    List<PersonModel> _PersonList;
-
-    private string searchText = string.Empty;
-    private List<PersonModel> allPersons;
-    private List<PersonModel> searchResults;
 
     protected override async Task OnInitializedAsync()
     {
         allPersons = await PersonService.GetAllPersonsList();
 
         _PersonList = await PersonService.GetAllPersonsList();
-
     }
 
     private void HandleSearchTextChanged(ChangeEventArgs e)
@@ -509,13 +449,7 @@ else
 
         if (!string.IsNullOrEmpty(searchText))
         {
-            // var results = await PersonService.SearchPersonsByName(searchText);
 
-            // if (results.Count > 0)
-            // {
-            //     searchResults = results;
-            // }
-            // else
             {
                 bool addContact = await JSRuntime.InvokeAsync<bool>("confirm", $"Contact with name '{searchText}' does not exist. Do you want to add it?");
 
@@ -528,30 +462,6 @@ else
         else
         {
             await OnInitializedAsync();
-        }
-    }
-
-
-    private void DisplayUpdate(int personId)
-    {
-        NavManager.NavigateTo($"updatePerson/{personId}");
-    }
-
-    private async void DisplayDeleteConfirmation(int personId)
-    {
-        bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this person?");
-        if (confirmed)
-        {
-            var deleteresponse = await PersonService.DeletePerson(new AddUpdatePersonRequest
-                {
-                    Id = personId
-                });
-
-            if (deleteresponse.Success)
-            {
-                await OnInitializedAsync();
-                StateHasChanged();
-            }
         }
     }
 
@@ -568,25 +478,33 @@ else
         else if (response == "Delete Contact")
 
         {
+            DisplayDeleteConfirmation(personDetail.Id);
+
+
+        }
+    }
+
+    private async void DisplayDeleteConfirmation(int personId)
+    {
+        bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this person?");
+        if (confirmed)
+        {
             var deleteresponse = await PersonService.DeletePerson(new AddUpdatePersonRequest
                 {
-                    Id = personDetail.Id
+                    Id = personId
                 });
 
             if (deleteresponse.Success)
             {
+
                 await OnInitializedAsync();
-                this.StateHasChanged();
+                StateHasChanged();
+
+                await App.Current.MainPage.DisplayActionSheet("Success", "Ok", null, "Contact Deleted ");
             }
         }
     }
 
-    [Parameter] public EventCallback<bool> OnConfirmation { get; set; }
-
-    private async Task ConfirmDelete()
-    {
-        await OnConfirmation.InvokeAsync(true);
-    }
 }
 
 
